Fri Nov 14 01:53:13 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* input.cc (get_user_input (const octave_value_list&, bool)):
	Return octave_value() if user enters `quit', `exit', or `return'.
	If debugging, let eval_string handle the printing chores and
	reset error_state before asking for more input.

	* input.cc (Fkeyboard): Unconditionally turn on history here.

	* lex.l (have_continuation, have_ellipsis_continuation): Declare
	arg as bool, not int.  Change callers.

	* lex.l (Vbackslash_escapes): New static variable.
	(backslash_escapes): New function.
	(do_string_escapes): Return immediately if ! Vbackslash_escapes.
	(eat_whitespace, eat_continuation): Only call have_continuation if
	Vbackslash_escapes.
	(handle_string): Backslash is only special if Vbackslash_escapes.
	(symbols_of_lex): Add DEFVAR for backslash_escapes.
	* octave.cc (maximum_braindamage): Set backslash_escapes to 0.

Thu Nov 13 16:20:40 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* variables.cc (Fexist): Also return 2 if NAME is a regular file
	somewhere in the LOADPATH.

	* data.cc (sumsq): Fix doc string.

	* parse.y (Fsource): Call parse_fcn_file, not parse_and_execute.

Tue Oct  7 16:51:01 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* defun-int.h (DEFINE_FUN_INSTALLER_FUN): Set installed to true
	after installing the function.

Thu Sep 25 10:17:26 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DLD-FUNCTIONS/filter.cc (Ffilter): Return second output value
	even when called with only 3 arguments.

Mon Sep 22 16:44:27 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DLD-FUNCTIONS/rand.cc (do_rand): Print error if first of two
	args is a string but doesn't match "seed".
	(Frand, Frandn): Fix doc string.

Mon Aug 25 10:42:07 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* input.cc (get_user_input): Return an empty string if the user
	just types RET.

Thu Jul 31 22:59:04 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lex.l <TEXT_FCN>: Ensure that we handle words that begin with